--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/transactions.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/transactions.html
@@ -50,77 +50,7 @@
     </div>
     <!-- Hero Area End -->
 
-    <!-- Featured Game Area Start -->
-    <section class="featured-game">
-        <!-- Features Area Start -->
-        <div class="features">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="feature-box">
-                            <div class="feature-box-inner">
-                                <div class="row">
-                                    
-                                    <div class="col-lg-4 col-md-6">
-                                        <a href="/gameresults">
-                                            <div class="single-feature">
-                                                <div class="icon one">
-                                                    <img src="{% static 'wheelspin/assets/images/feature/icon1.png' %}" alt="">
-                                                </div>
-                                                <div class="content">
-                                                    <h4 class="title">
-                                                        Game Result
-                                                    </h4>
-                                                
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    
-                                    
-                                    <div class="col-lg-4 col-md-6">
-                                        <a href="/transactions">
-                                            <div class="single-feature">
-                                                <div class="icon two">
-                                                    <img src="{% static 'wheelspin/assets/images/feature/icon2.png' %}" alt="">
-                                                </div>
-                                                <div class="content">
-                                                    <h4 class="title">
-                                                        Transactions
-                                                    </h4>
-                                                    
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    
-                                    
-                                    <div class="col-lg-4 col-md-6">
-                                        <a href="/exchange">
-                                            <div class="single-feature">
-                                                <div class="icon three">
-                                                    <img src="{% static 'wheelspin/assets/images/feature/icon3.png' %}" alt="">
-                                                </div>
-                                                <div class="content">
-                                                    <h4 class="title">
-                                                        Deposit/Withdraw
-                                                    </h4>
-                                                    
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Features Area End -->
-        
-    <!-- Featured Game Area	End -->
+
 
     <!-- Latest Activities Area Start -->
     <section class="activities">
@@ -145,57 +75,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="tab-menu-area">
-                        <ul class="nav nav-lend mb-3" id="pills-tab" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" id="pills-all-bets-tab" data-toggle="pill" href="#pills-all-bets" role="tab" aria-controls="pills-all-bets" aria-selected="true">Games</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="pills-my-bets-tab" data-toggle="pill" href="#pills-my-bets" role="tab" aria-controls="pills-my-bets" aria-selected="false">Transactions</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tab-content" id="pills-tabContent">
-                        <div class="tab-pane fade show active" id="pills-all-bets" role="tabpanel" aria-labelledby="pills-all-bets-tab">
-                            <div class="responsive-table">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">Slot</th>
-                                            <th scope="col">Capacity</th>
-                                            <th scope="col">Result</th>
-                                            <th scope="col">Charge</th>
-                                            <th scope="col">Balance</th>
-                                            <th scope="col">Time</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <img src="{% static 'wheelspin/assets/images/people/p1.png' %}" alt=""> Tom Bass
-                                            </td>
-                                            <td>
-                                                b799b8724b
-                                            </td>
-                                            <td>
-                                                <img src="{% static 'wheelspin/assets/images/icon1.png' %}" alt=""> 0.00000051
-                                            </td>
-                                            <td>70%</td>
-                                            <td>Dice</td>
-                                            <td>
-                                                <img src="{% static 'wheelspin/assets/images/icon1.png' %}" alt=""> 0.00000051
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan=6 style="text-align:center;">
-                                                <a href="/gameresults" class="mybtn1">See more...</a>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="pills-my-bets" role="tabpanel" aria-labelledby="pills-my-bets-tab">
+                    
+                    
+
                             <div class="responsive-table">
                                 <table class="table">
                                     <thead>
@@ -226,14 +108,17 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td colspan=6 style="text-align:center;">
-                                                <a href="/transactions" class="mybtn1">See more...</a>
+                                            <td colspan=3 style="text-align:center;">
+                                                <a href="/gameresults" class="mybtn1">Previous</a>
+                                            </td>
+                                            <td colspan=3 style="text-align:center;">
+                                                <a href="/gameresults" class="mybtn1">Next</a>
                                             </td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
